--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTG-8" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="/Users/patas/OneDrive/Desktop/Bootcamp/projects/assets/css/style.css" />
     </head>
     <body>
         <!-- navigation -->
