--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTG-8" />
         <title>Run Buddy</title>
-        <link rel="stylesheet" href="/Users/patas/OneDrive/Desktop/Bootcamp/projects/assets/css/style.css" />
+        <link rel="stylesheet" href="../assets/css/style.css" />
     </head>
 
     <body>
@@ -34,8 +34,8 @@
         </header>
 
         <!-- hero section -->
-        <section>
-            <div>
+        <section class="hero">
+            <div class="hero-form">
                 <h3>Get Started Today!</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult.</p>
 
