what we do section style

--- a/index.html
+++ b/index.html
@@ -69,10 +69,13 @@
     </section>
 
     <!-- "what we do" section -->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
         <h2>What We Do</h2>
         <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, reiciendis quibusdam sit vitae eligendi odio sapiente rem nulla qui, iste accusantium quis ut, magnam adipisci minus molestiae facilis numquam. Iste!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius soluta cumque nulla repudiandae saepe hic ea ab quis veniam excepturi aut distinctio repellat, beatae voluptatum amet accusantium modi consequuntur et!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quaerat consectetur excepturi earum, dignissimos, omnis, voluptatem ipsa amet quod vero beatae delectus cum dolore non illum harum consequuntur vel fugiat?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione doloribus non in delectus maiores amet voluptates aliquam error eligendi voluptate eius, excepturi at! Modi ab excepturi vero facilis. Nemo, veritatis?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum unde qui, numquam deleniti at impedit excepturi nesciunt, rerum reiciendis, a ipsa fugiat libero exercitationem quia voluptates quaerat recusandae nulla beatae.
         </p>
     </section>
         
