steps text refined

--- a/index.html
+++ b/index.html
@@ -70,40 +70,39 @@
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-        <h2>What We Do</h2>
+        <h2 class="section-title primary-border">What We Do</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius soluta cumque nulla repudiandae saepe hic ea ab quis veniam excepturi aut distinctio repellat, beatae voluptatum amet accusantium modi consequuntur et!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quaerat consectetur excepturi earum, dignissimos, omnis, voluptatem ipsa amet quod vero beatae delectus cum dolore non illum harum consequuntur vel fugiat?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione doloribus non in delectus maiores amet voluptates aliquam error eligendi voluptate eius, excepturi at! Modi ab excepturi vero facilis. Nemo, veritatis?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum unde qui, numquam deleniti at impedit excepturi nesciunt, rerum reiciendis, a ipsa fugiat libero exercitationem quia voluptates quaerat recusandae nulla beatae.
         </p>
     </section>
         
     <!-- "what you do" section -->
-    <section id="what-you-do">
-        <h2>What You Do</h2>
+    <section id="what-you-do" class="steps">
+        <h2 class="section-title secondary-border">What You Do</h2>
 
         <div>
             <!-- insert 1st img element -->
             <img src="../assets/images/step-1.svg" alt=""/>
-            <h3>Step 1: Fill Out the Form Above.</h3>
+            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
             <p>You're already here, so why not?</p>
         </div>
         <div>
             <!-- insert 2nd img element -->
             <img src="../assets/images/step-2.svg" alt=""/>
-            <h3>Step 2: Consult with One of Our Trainers.</h3>
+            <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
             <p>Are you her to build muscle, lose weight, or just feel good?</p>
         </div>
         <div>
             <!-- insert 3rd img element -->
             <img src="../assets/images/step-3.svg" alt=""/>
-            <h3>Step 3: Get Running.</h3>
+            <h3>Step 3: <span>Get Running.</span></h3>
             <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
         </div>
         <div>
             <img src="../assets/images/step-4.svg" alt=""/>
-            <h3>Step 4: See Results.</h3>
+            <h3>Step 4: <span>See Results.</span></h3>
             <p>Bi-weekly checkins with your trainer will keep you focused.</p>
         </div>
     </section>
