--- a/index.html
+++ b/index.html
@@ -108,13 +108,46 @@
     </section>
         
     <!-- "meet the trainers" section -->
-    <section id="your-trainers">
-        <h2>Your Traineres</h2>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">Meet the Trainers</h2>
+        <!-- first trainer bio -->
+        <article class="trainer">
+            <img src="../assets/images/trainer-1.jpg" alt="Arron in his workout clothes, ready to pump iron"/>
+            <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolorem expedita nemo, ratione omnis sequi quis, voluptas dolores nobis officia necessitatibus minus recusandae voluptatem debitis similique voluptate corporis provident sapiente.
+                </p>
+            </div>
+        </article>
+        <!-- second trainer bio -->
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet praesentium dignissimos id quia quisquam, voluptas sint! Quos debitis incidunt laborum enim suscipit odio itaque eius aut odit! Nihil, facilis earum?
+                </p>
+            </div>
+            <img src="../assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+        </article>
+        <!-- third trainer bio -->
+        <article class="trainer">
+            <img src="../assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
+            <div class="trainer-bio text-left">
+                <h3>Harry "the Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi optio exercitationem reprehenderit deleniti nihil quod perferendis ullam nam? Maiores ipsum iusto sunt quis optio quibusdam laborum enim expedita? Sapiente, veniam!
+                </p>
+            </div>
+        </article>
     </section>
         
     <!--"reach out" section -->
-    <section id="reach-out">
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="">
+        <h2 class="section-title secondary-border">Reach Out</h2>
     </section>
 
     <!-- footer -->
