--- a/index.html
+++ b/index.html
@@ -146,15 +146,10 @@
     </section>
         
     <!--"reach out" section -->
-    <section id="reach-out">
+    <section id="reach-out" class="contact-info">
         <h2 class="section-title secondary-border">Reach Out</h2>
         <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3091.1644365523284!2d-85.91721524880234!3d39.216430979422306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ba03733664249%3A0xadb14b087283d017!2s1731%20Chestnut%20St%2C%20Columbus%2C%20IN%2047201!5e0!3m2!1sen!2sus!4v1628194223978!5m2!1sen!2sus"
-             width="400"
-             height="400"
-             style="border:0;"
-             allowfullscreen=""
-             loading="lazy">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3091.1644365523284!2d-85.91721524880234!3d39.216430979422306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ba03733664249%3A0xadb14b087283d017!2s1731%20Chestnut%20St%2C%20Columbus%2C%20IN%2047201!5e0!3m2!1sen!2sus!4v1628194223978!5m2!1sen!2sus">
             </iframe>
         </div>
         <div>
