--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
     <!-- hero/jumbotron -->
     <section class="hero">
+        <div class="hero-habits">
+            <h2>Start Building Habits</h2>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus nulla iure alias excepturi quasi animi amet! Vitae delectus inventore eius. Quasi quos repellendus harum dicta amet possimus ullam iste assumenda.
+            </p>
+        </div>
         <div class="hero-form">
             <h3>Get Started Today!</h3>
             <p>Fill out this form and one of our trainers will schedule a consult.</p>
