add flexbox to the hero

--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
             </a>
         </h1>
         <nav>
-            <!-- Unordered list element -->
             <ul>
-                <!-- List item element -->
                 <li>
-                    <!-- Anchor element -->
                     <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
@@ -38,9 +35,10 @@
 
     <!-- hero/jumbotron -->
     <section class="hero">
-        <div class="hero-habits">
+        <div class="hero-cta">
             <h2>Start Building Habits</h2>
             <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum aperiam assumenda dignissimos corporis quisquam, nulla asperiores, ut eius suscipit dolores totam aspernatur dicta dolorem a unde placeat accusamus natus in.
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus nulla iure alias excepturi quasi animi amet! Vitae delectus inventore eius. Quasi quos repellendus harum dicta amet possimus ullam iste assumenda.
             </p>
         </div>
@@ -117,6 +115,8 @@
     <!-- "meet the trainers" section -->
     <section id="your-trainers" class="trainers">
         <h2 class="section-title primary-border">Meet the Trainers</h2>
+
+        <!-- first trainer bio -->
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron in his workout clothes, ready to pump iron"/>
             <div class="trainer-bio text-left">
